syntax = "proto3";

package player_package;

message ClientMessage{
    string a = 1;
    string b = 2;
    string c = 3;
    string d = 4;
}

message ServerMessage {

}

message EmptyRequest{

}

service PlayerService{
    rpc pointBit(ClientMessage) returns (ServerMessage) {};
}
